--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
 	</section>
 	<section>
 		<div class="container">
+			<div class="row">
+				<div class="col-md-4">Login Form</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
 			<ul class="nav nav-tabs">
 			  <li class="nav-item">
 			    <a class="nav-link active show" data-toggle="tab" href="#home">Home</a>
